--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     // Room Database
     implementation "androidx.room:room-runtime:2.7.2"
     implementation libs.navigation.ui
+    implementation libs.constraintlayout
     annotationProcessor "androidx.room:room-compiler:2.7.2"
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.9.2"
 
