Updating the profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,29 +13,34 @@
         android:theme="@style/Theme.MedManage">
 
 
+        <!-- This is the starting screen of your app -->
         <activity
-            android:name=".activities.FoodViewActivity"
+            android:name=".activities.UpdateProfileActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.DashboardActivity"
-            android:exported="false">
-        </activity>
-        <activity android:name=".activities.EditFoodActivity"
-            android:exported="false">
 
-        </activity>
+        <!-- Declarations for your other activities -->
+<!--        <activity-->
+<!--            android:name=".activities.FoodViewActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".activities.DashboardActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".activities.EditFoodActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".activities.UpdateProfileActivity"-->
+<!--            android:exported="false" />-->
 
-
+<!--        <activity-->
+<!--            android:name=".activities.LoginActivity"-->
+<!--            android:exported="false" />-->
 
     </application>
-
-
-
-
 
 </manifest>
