--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/medic_manage_foreground"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/medic_manage_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedManage">
 
 
         <!-- This is the starting screen of your app -->
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".activities.MainScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,15 +23,27 @@
             </intent-filter>
         </activity>
         <!-- Declarations for your other activities -->
-<!--        <activity-->
-<!--            android:name=".activities.FoodViewActivity"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".activities.DashboardActivity"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".activities.EditFoodActivity"-->
-<!--            android:exported="false" />-->
+        <activity android:name=".activities.ViewProfileDetailsActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".activities.FoodViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.DashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.SignupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.LoginActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".activities.UpdateProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.EditFoodActivity"
+            android:exported="false" />
 <!--        <activity-->
 <!--            android:name=".activities.UpdateProfileActivity"-->
 <!--            android:exported="false" />-->
