--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="https:schemas.android.com/tools"
+    package="com.example.medmanage.activities">
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/medic_manage_foreground"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/medic_manage_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.MedManage">
 
+        android:label="@string/app_name"
+        android:theme="@style/Theme.MedManage">
 
         <activity android:name=".activities.ViewProfileDetailsActivity"
             android:exported="false"/>
@@ -19,46 +14,40 @@
         <activity android:name=".activities.ViewMedicationActivity"
             android:exported="false"/>
 
-        <activity
-            android:name=".activities.FoodViewActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.DashboardActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.SignupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.LoginActivity"
+        <activity android:name=".activities.FoodViewActivity"
             android:exported="false" />
 
-        <activity
-            android:name=".activities.UpdateProfileActivity"
+        <activity android:name=".activities.DashboardActivity"
             android:exported="false" />
-        <activity
-            android:name=".activities.EditFoodActivity"
+
+        <activity android:name=".activities.SignupActivity"
             android:exported="false" />
-        <activity
-            android:name=".activities.ViewAppointmentActivity"
+
+        <activity android:name=".activities.LoginActivity"
             android:exported="false" />
+
+        <activity android:name=".activities.UpdateProfileActivity"
+            android:exported="false" />
+
+        <activity android:name=".activities.EditFoodActivity"
+            android:exported="false" />
+
+        <activity android:name=".activities.ViewAppointmentActivity"
+            android:exported="false" />
+
         <activity android:name=".activities.ReviewAppointmentActivity"
             android:exported="false"/>
+
         <activity android:name=".activities.ScheduleAppointmentActivity"
             android:exported="false"/>
 
-
-
-
-
-
         <activity android:name=".activities.MainScreenActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
 </manifest>
