initial Fragments for dashboard
Dashboard fragments

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation "androidx.room:room-runtime:2.7.2"
     implementation libs.navigation.ui
     implementation libs.constraintlayout
+    implementation libs.legacy.support.v4
+    implementation libs.lifecycle.livedata.ktx
+    implementation libs.lifecycle.viewmodel.ktx
     annotationProcessor "androidx.room:room-compiler:2.7.2"
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.9.2"
 
