--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,14 +51,14 @@
 
 
 
-<!--        <activity android:name=".activities.DashboardActivity"-->
-<!--            android:exported="true"-->
-<!--            android:theme="@style/Theme.MedManage.NoActionBar">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+       <activity android:name=".activities.MainScreenActivity"
+          android:exported="true"
+          android:theme="@style/Theme.MedManage">
+           <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+              <category android:name="android.intent.category.LAUNCHER" />
+           </intent-filter>
+      </activity>
 
     </application>
 
