--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,55 +10,58 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/medic_manage_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MedManage">
+        android:theme="@style/Theme.MedManage.NoActionBar">
 
 
-        <activity android:name=".activities.ViewProfileDetailsActivity"
-            android:exported="false"/>
+<!--        <activity android:name=".activities.ViewProfileDetailsActivity"-->
+<!--            android:exported="false"/>-->
 
-        <activity android:name=".activities.ViewMedicationActivity"
-            android:exported="false"/>
+<!--        <activity android:name=".activities.ViewMedicationActivity"-->
+<!--            android:exported="false"/>-->
 
-        <activity
-            android:name=".activities.FoodViewActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".activities.FoodViewActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".activities.DashboardActivity"
+            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".activities.SignupActivity"-->
+<!--            android:exported="false" />-->
+        <activity
+            android:name=".activities.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".activities.SignupActivity"
             android:exported="false" />
-        <activity
-            android:name=".activities.LoginActivity"
-            android:exported="false" />
 
-        <activity
-            android:name=".activities.UpdateProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.EditFoodActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.ViewAppointmentActivity"
-            android:exported="false" />
-        <activity android:name=".activities.ReviewAppointmentActivity"
-            android:exported="false"/>
-        <activity android:name=".activities.ScheduleAppointmentActivity"
-            android:exported="false"/>
+<!--        <activity-->
+<!--            android:name=".activities.UpdateProfileActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".activities.EditFoodActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".activities.ViewAppointmentActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity android:name=".activities.ReviewAppointmentActivity"-->
+<!--            android:exported="false"/>-->
+<!--        <activity android:name=".activities.ScheduleAppointmentActivity"-->
+<!--            android:exported="false"/>-->
 
 
 
 
 
 
-<!--        <activity android:name=".activities.DashboardActivity"-->
-<!--            android:exported="true"-->
-<!--            android:theme="@style/Theme.MedManage.NoActionBar">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+        <activity android:name=".activities.MainScreenActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MedManage.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
