--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -42,12 +41,12 @@
             android:name=".activities.SignupActivity"
             android:exported="false" />
 
-        <activity android:name=".activities.MainScreenActivity"
+        <activity android:name=".activities.SigninActivity"
             android:exported="false"
             android:theme="@style/Theme.MedManage"/>
 
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".activities.WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
