--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,12 @@
         <activity
             android:name=".activities.UpdateProfileActivity"
             android:exported="false" />
+
+
         <activity
             android:name=".activities.EditFoodActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.Dialog.Alert" />
         <activity
             android:name=".activities.StudentViewAppointmentActivity"
             android:exported="false" />
