--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/medic_manage_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MedManage"> <activity android:name=".activities.ViewProfileDetailsActivity"
-        android:exported="false"/>
+        android:theme="@style/Theme.MedManage">
+
 
         <activity android:name=".activities.ViewMedicationActivity"
             android:exported="false"/>
